not perfect, but it mostly works

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Trello addition test",
+  "name": "Member scrum addition for Trello",
   "manifest_version": 2,
   "version": "0.1.1",
-  "description": "Add time in first column for all members.",
-  "icons": { "16": "bowser.gif",
-             "48": "bowser.gif",
-             "128": "bowser.gif" },
+  "description": "Add time in first column for all members. Runs on top of \"Scrum for Trello\" extension.",
+  "icons": { "16": "trello_sum.png",
+             "48": "trello_sum.png",
+             "128": "trello_sum.png" },
   "content_scripts": [
     {
       "matches": ["https://trello.com/*"],
